up date fragment: near me + search + hot deal

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,7 @@
     <string name="menu_send">Send</string>
     <string name="give_us_your_rate">Give us your rate</string>
     <string name="go">Go</string>
+    <string name="t_b_n">Đặt Bàn</string>
+    <string name="t_t_c">Tất cả</string>
+    <string name="uy_t_n">Uy tín</string>
 </resources>
