update home page

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,8 +17,8 @@
     <string name="menu_tools">Tools</string>
     <string name="menu_share">Share</string>
     <string name="menu_send">Send</string>
-    <string name="give_us_your_rate">Give us your rate</string>
-    <string name="go">Go</string>
+    <string name="give_us_your_rate">Hãy dành cho chúng tôi đánh giá\n của bạn</string>
+    <string name="go">Đến</string>
     <string name="t_b_n">Đặt Bàn</string>
     <string name="t_t_c">Tất cả</string>
     <string name="uy_t_n">Uy tín</string>
